--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service android:name=".Audio"/>
+        <service android:name=".Audio"
+            android:stopWithTask="false"/>
     </application>
 
 </manifest>
